# inventory-rl

./: .gitignore  .markdownlint.json  README.md  pyproject.toml  requirements-core.txt  requirements-stretch.txt
docs/: BUSINESS_MEMO.md  DESIGN.md  REFLECTION.md
evals/: run_evals.py  scenarios.jsonl
evidence/: eval_report.json  ppo_training.json  results.csv  sample_run_log.txt  scenario_report.json  training_curves.json
models/: q_table.npz  q_table_naive.npz  q_table_seasonal_ip.npz  q_table_seasonal_phase.npz
paper/: report.tex
src/inventory_rl/: __init__.py  baselines.py  cli.py  config.py  demand.py  env.py  evaluation.py  experiments.py  plotting.py  ppo_agent.py  q_learning.py  rewards.py
tests/: test_baselines.py  test_demand.py  test_env.py  test_evaluation.py  test_experiments.py  test_q_learning.py  test_rewards.py
